Fixed several sonar issues